# photonai_projects

./: .gitignore  404.html  Dockerfile  README.md  container.def  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_example.sh  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/: index.html
docker/: Dockerfile
docs/: api.md  getting-started.md  index.md  report.md
docs/examples/: breast-cancer.md
docs/stylesheets/: pastel-theme.css
example/: permutation_test.py
examples/: compare_analyses_example.py  hyperpipe_constructor.py  photonai_project_example.py  photonai_project_report.py
examples/breast-cancer/: index.html
getting-started/: index.html
permutation/: permutation_test_palma.py
photonai_projects/: cli.py  project.py  reporter.py  utils.py
report/: __init__.py  datapane_example.py  index.html  reporter.py
search/: search_index.json
static/: example_report.html
stylesheets/: pastel-theme.css
