# pyproject.toml

[tool.poetry]
name = "photonai_projects"
version = "0.1.1"
description = "Run and summarize PHOTONAI analyses"
authors = [
    "Nils Winter <nils.r.winter@uni-muenster.de>",
    "MMLL <nils.r.winter@uni-muenster.de>"
]
packages = [{ include = "photonai_projects" }]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
typer = "*"
arakawa = "*"
photonai = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"